[package]
name = "polkadot-rpc"
version = "0.7.21"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false }
