[package]
name = "polkadot-rpc"
version = "0.7.28-pre1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sp-runtime = { git = "https://github.com/rakanalh/substrate", branch = "sign_with"  }
sp-api = { git = "https://github.com/rakanalh/substrate", branch = "sign_with"  }
sc-rpc = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/rakanalh/substrate", branch = "sign_with"  }
pallet-transaction-payment-rpc = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false }
