[package]
name = "polkadot-service"
version = "0.7.21"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
polkadot-network = { path = "../network"  }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sc-client = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
codec = { package = "parity-scale-codec", version = "1.1.0" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "kiz-offchain-phragmen-4-revert" }

[features]
default = ["rocksdb"]
rocksdb = ["service/rocksdb"]
