[package]
name = "polkadot-service"
version = "0.7.28-pre1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store", optional = true }
consensus = { package = "polkadot-validation", path = "../validation", optional = true }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
polkadot-network = { path = "../network", optional = true }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sp-api = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sp-runtime = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sp-blockchain = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sp-core = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sc-client = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sc-client-api = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sc-client-db = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sc-chain-spec = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sc-executor = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sc-network = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
consensus_common = { package = "sp-consensus", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
inherents = { package = "sp-inherents", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
service = { package = "sc-service", git = "https://github.com/rakanalh/substrate", branch = "sign_with", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sc-transaction-pool = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sp-transaction-pool = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sc-keystore = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
pallet-babe = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
pallet-staking = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
im-online = { package = "pallet-im-online", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
babe = { package = "sc-consensus-babe", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sp-block-builder = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
codec = { package = "parity-scale-codec", version = "1.1.0" }
sp-session = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/rakanalh/substrate", branch = "sign_with" }
frame-benchmarking = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }

[dev-dependencies]
polkadot-test-runtime-client = { path = "../runtime/test-runtime/client" }
sc-block-builder = { git = "https://github.com/rakanalh/substrate", branch = "sign_with" }

[features]
default = ["rocksdb", "full-node"]
rocksdb = ["service/rocksdb"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks"]
full-node = ["av_store", "consensus", "polkadot-network"]
